- Renamed detail::nd_traits to detail::specific_nd_traits, which is a better
  name in combination with the generic_nd_traits template.

- Renamed bin_value_type_traits to bin_iter_value_type_traits and moved it from
  ndhist.cpp into its own header file.

- Renamed the bc_value_traits template to bin_utils and move it into its own
  header file.

- Moved the bin_value template from ndhist.cpp into its own header file.

- Added the python utility (factory) functions ``ndhist.axes.linear`` and
  ``ndhist.axes.linear_bins`` to create axes with linear bin space and constant
  bin widths. These functions return the actual ``ndhist.core.axis`` object
  needed to create a ``ndhist.core.ndhist`` object.

- Introduced the ``build_python_package`` make target to build the ndhist python
  package within the build tree. This way updates in the python code part can
  be tested much more easier without the need of recompiling the C++ code.

- Make the python package installation more flexible by introducing the
  ``--user`` option to the ``configure`` script. If this option is not
  specified, the python package will be installed in a directory relative to the
  ``--prefix`` option. In cases where ``--prefix`` is set to ``/usr`` or
  ``/usr/local``, the package will be installed into the system's python package
  repository.

- Developed a setuptools installation script for the Python package "ndhist", so
  it gets installed either within the ``--prefix`` directory, or into the python
  dist-packages directory located in the user's home directory under
  ``.local/``. So the user does not have to set the PYTHONPATH environment
  variable manually.

- Adapted the ndhist constructor to use a tuple of Axis objects.

- Added pybindings for GenericAxis.

- Added --boostnumpy-include-path and --boostnumpy-library-path as options
  to the configure script, which are passed on to cmake with the environment
  variables BOOSTNUMPY_INCLUDE_PATH and BOOSTNUMPY_LIBRARY_PATH, respectively.