@@ -1,3 +1,9 @@
+- Integrated get_noor_bin into bin_utils as get_bin_by_indices function.
+
+- Renamed flush_oor_cache function to flush_value_cache.
+
+- Renamed the oor_fill_record_stack template to value_cache.
+
 - Renamed detail::nd_traits to detail::specific_nd_traits, which is a better
   name in combination with the generic_nd_traits template.
 
